--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,32 @@
-.App {
-  text-align: center;
+ul.character-list{
+  list-style-type: none;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+ul.character-list a{
+  text-decoration: none;
+  font-weight: bold;
+  line-height: 1.5em;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.character-list {
+  padding-bottom: 40px;
+}
+
+.character-page{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
+  padding: 40px;
 }
 
-.App-link {
-  color: #61dafb;
+.character-page div{
+  padding: 40px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.character-page img {
+  width: 300px;
+  height: 300px;
+}
+
+#root{
+  display: flex;
 }
